iac/networking/consul-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: consul-httproute
  namespace: group-9
  labels:
    app.kubernetes.io/name: consul
    app.kubernetes.io/instance: group-9
    app.kubernetes.io/part-of: budgetwatch
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /group-9/consul
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Host
                value: 130.192.100.243/group-9
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Prefix
                value: /group-9/consul
      backendRefs:
        - group: ""
          kind: Service
          name: consul
          port: 8500
          weight: 1
